--- a/platformio.ini
+++ b/platformio.ini
@@ -18,3 +18,6 @@ lib_deps =
 	marcoschwartz/LiquidCrystal_I2C@^1.1.4
 	miguelbalboa/MFRC522@^1.4.11
 	blynkkk/Blynk@^1.3.2
+	adafruit/Adafruit Unified Sensor@^1.1.14
+	beegee-tokyo/DHT sensor library for ESPx@^1.19
+	adafruit/DHT sensor library@^1.4.6
